RESOLVED FIXED110860
[BlackBerry] Context menu cannot be invoked after doing text selection in landscape mode
https://bugs.webkit.org/show_bug.cgi?id=110860
Summary [BlackBerry] Context menu cannot be invoked after doing text selection in lan...
Sean Wang
Reported 2013-02-26 01:22:56 PST
Steps: 1) Launch browser and navigate to a webpage 2) Tap on the overflow menu to add to Home Screen. 3) Rotate the device and bring up the Fine Cursor Controller 4) Press and hold to select text 5) Tap on it again to invoke Context Menu Actual: 5) The screen moves up and down or sometimes the Context Menu comes up behind the Keyboard Expected: 5) The Context Menu is displayed and the Virtual Keyboard is dismissed.
Attachments
patch (2.23 KB, patch)
2013-02-26 01:30 PST, Sean Wang
no flags
patch (6.55 KB, patch)
2013-02-26 01:34 PST, Sean Wang
no flags
patch (6.40 KB, patch)
2013-02-26 18:38 PST, Sean Wang
no flags
patch (6.39 KB, patch)
2013-02-26 19:07 PST, Sean Wang
no flags
Sean Wang
Comment 1 2013-02-26 01:30:38 PST
Sean Wang
Comment 2 2013-02-26 01:32:31 PST
Comment on attachment 190238 [details] patch Wrong patch
Sean Wang
Comment 3 2013-02-26 01:34:35 PST
WebKit Review Bot
Comment 4 2013-02-26 02:12:50 PST
Attachment 190240 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPageClient.h', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp', u'Source/WebKit/blackberry/WebKitSupport/SelectionHandler.h']" exit_code: 1 Source/WebKit/blackberry/Api/WebPageClient.h:158: The parameter name "details" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:1024: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:1025: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:1026: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:1027: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:1028: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 6 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sean Wang
Comment 5 2013-02-26 18:38:40 PST
WebKit Review Bot
Comment 6 2013-02-26 18:52:50 PST
Attachment 190411 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPageClient.h', u'Source/WebKit/blackberry/ChangeLog', u'Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp', u'Source/WebKit/blackberry/WebKitSupport/SelectionHandler.h']" exit_code: 1 Source/WebKit/blackberry/Api/WebPageClient.h:158: The parameter name "details" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sean Wang
Comment 7 2013-02-26 19:07:19 PST
Yong Li
Comment 8 2013-02-27 09:04:15 PST
Comment on attachment 190418 [details] patch based on mike's review
WebKit Review Bot
Comment 9 2013-02-27 09:22:10 PST
Comment on attachment 190418 [details] patch Clearing flags on attachment: 190418 Committed r144202: <http://trac.webkit.org/changeset/144202>
WebKit Review Bot
Comment 10 2013-02-27 09:22:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.